<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleTransparent2"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/saltar_guia"
        android:textSize="24sp"
        android:padding="20dp"
        android:layout_margin="30dp"
        android:layout_gravity="top|end"
        style="@style/BotonGuia"/>

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/siguiente"
        android:textSize="24sp"
        android:padding="20dp"
        android:layout_margin="30dp"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        style="@style/BotonGuia"
        />

    <ImageView
        android:contentDescription="@string/marcador"
        android:src="@drawable/highlight"
        android:id="@+id/marcador"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_gravity="top|start"
        />
    <TextView
        android:id="@+id/bocadillo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bocadillo_info"
        android:background="@drawable/bocadillo"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="50dp"
        android:textColor="@color/white"
        android:padding="25dp"/>
    <dam.pmdm.spyrothedragon.canvas.ArrowView
        android:id="@+id/arrowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
</FrameLayout>